--- a/css/setup/typography.css
+++ b/css/setup/typography.css
@@ -3,3 +3,18 @@
     font-family: FontdinerSwanky;
     src: url('/fonts/FontdinerSwanky/FontdinerSwanky-Regular.ttf');
 }
+
+/* Fa */
+
+@font-face {
+    font-family: fa;
+    src: url('/fonts/fa/fa-solid-900.ttf');
+}
+
+.fa::before {
+    font-family: fa;
+}
+
+.fa.download::before {
+    content: '\f019';
+}
