--- a/css/style.css
+++ b/css/style.css
@@ -11,3 +11,4 @@
 @import url('./components/logo.css');
 @import url('./components/canvas.css');
 @import url('./components/edit-controller.css');
+@import url('./components/act-btns.css');
