--- a/css/style.css
+++ b/css/style.css
@@ -12,3 +12,5 @@
 @import url('./components/canvas.css');
 @import url('./components/edit-controller.css');
 @import url('./components/act-btns.css');
+@import url('./components/meme-settings.css');
+@import url('./components/settings-btns.css');
