--- a/css/style.css
+++ b/css/style.css
@@ -14,3 +14,4 @@
 @import url('./components/act-btns.css');
 @import url('./components/meme-settings.css');
 @import url('./components/settings-btns.css');
+@import url('./components/lines-settings.css');
