--- a/css/components/act-btns.css
+++ b/css/components/act-btns.css
@@ -1,10 +1,14 @@
+.act {
+    margin-top: auto;
+}
+
 .act-btns {
     width: fit-content;
     border: 1px solid black;
     border-radius: 2em;
     padding: 0.3em 0.5em;
-
     margin-block-start: 1em;
+
     color: white;
 }
 
