--- a/css/basic/layouts.css
+++ b/css/basic/layouts.css
@@ -1,7 +1,17 @@
+/* MAIN */
+.main-content {
+    display: grid;
+    grid-template-columns: 20px 1fr 20px;
+}
+
+.main-content>* {
+    grid-column: 2;
+}
+
 /* GALLERY */
 .gallery {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
     gap: 20px;
     padding: 30px;
     margin: 0 auto;
@@ -15,8 +25,8 @@
 /* EDITOR */
 .editor {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    justify-content: center;
+
     gap: 20px;
-    padding: 30px;
     margin: 0 auto;
 }
