--- a/css/basic/layouts.css
+++ b/css/basic/layouts.css
@@ -15,6 +15,7 @@
     gap: 20px;
     padding: 30px;
     margin: 0 auto;
+    margin-block-start: 2em;
 }
 
 .gallery img {
@@ -29,4 +30,5 @@
 
     gap: 20px;
     margin: 0 auto;
+    margin-block-start: 2em;
 }
