--- a/css/components/meme-settings.css
+++ b/css/components/meme-settings.css
@@ -10,6 +10,12 @@
     cursor: pointer;
 }
 
+.alignments {
+    justify-content: space-evenly;
+    margin-block-start: 2em;
+    padding: 0.5em;
+    background-color: #049e9ead;
+}
 .meme-text {
     align-self: center;
 }
