--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@
 @import url('./components/meme-settings.css');
 @import url('./components/settings-btns.css');
 @import url('./components/lines-settings.css');
+@import url('./components/footer.css');
 
 /* MEDIA QUERY */
 @import url('./setup/mq.css');
