--- a/css/components/header.css
+++ b/css/components/header.css
@@ -1,5 +1,6 @@
 .main-header {
-    display: flex;
+    position: sticky;
+    top: 0;
     align-items: center;
     background-color: #a8a8a8;
     min-height: 45px;
