Fix resize problems

--- a/css/components/canvas.css
+++ b/css/components/canvas.css
@@ -1,4 +1,13 @@
+.canvas-container {
+    width: 325px;
+    height: 325px;
+}
+
 canvas {
+    width: 100%;
+    height: 100%;
+    display: block;
+
     background-color: #b4b4b4;
     border: 1px solid black;
 }
