--- a/css/setup/typography.css
+++ b/css/setup/typography.css
@@ -1,14 +1,14 @@
 /* FontdinerSwanky */
 @font-face {
     font-family: FontdinerSwanky;
-    src: url('/../fonts/FontdinerSwanky/FontdinerSwanky-Regular.ttf');
+    src: url('../../fonts/FontdinerSwanky/FontdinerSwanky-Regular.ttf');
 }
 
 /* Fa */
 
 @font-face {
     font-family: fa;
-    src: url('/../fonts/fa/fa-solid-900.ttf');
+    src: url('../../fonts/fa/fa-solid-900.ttf');
 }
 
 .fa::before {
@@ -57,7 +57,7 @@
 
 @font-face {
     font-family: fa-brand;
-    src: url('/../fonts/fa/fa-brands-400.ttf');
+    src: url('../../fonts/fa/fa-brands-400.ttf');
 }
 
 .fa-brand::before {
