--- a/css/components/act-btns.css
+++ b/css/components/act-btns.css
@@ -9,7 +9,7 @@
     border: 1px solid black;
     border-radius: 2em;
     padding: 0.3em 0.5em;
-    margin-block-start: 1em;
+    /* margin-block-start: 1em; */
 
     color: white;
 }
