--- a/css/components/footer.css
+++ b/css/components/footer.css
@@ -6,7 +6,7 @@
 
     min-height: 45px;
     background-color: #a8a8a8;
-    padding: 0.5em;
+    /* padding: 0.5em; */
 }
 
 .main-footer .footer-paragraph {
