--- a/css/components/lines-settings.css
+++ b/css/components/lines-settings.css
@@ -2,7 +2,7 @@
     justify-content: center;
     gap: 15px;
 
-    margin-block-start: 2em;
+    /* margin-block-start: 2em; */
     background-color: #049e9ead;
     padding: 0.5em;
 }
