--- a/css/setup/mq.css
+++ b/css/setup/mq.css
@@ -8,6 +8,14 @@
         grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     }
 
+    .editor {
+        gap: 20px;
+    }
+
+    .main-footer {
+        padding: 0.5em;
+    }
+
 }
 
 /* MEDIUM */
@@ -23,6 +31,10 @@
     .canvas-container {
         width: 100%;
         height: 100%;
+    }
+
+    .editor, .lines-settings, .meme-text, .settings, .alignments {
+        margin-block-start: 2em;
     }
 }
 
